--- a/projet2.html
+++ b/projet2.html
@@ -11,7 +11,7 @@
           <!--boot icone-->
           <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
           <!--fim boot icones-->
-    <title>Cabeçalho Personalizado</title>
+    <title>PROJETO CRIO</title>
     <link rel="stylesheet" href="projeto2.css">
 </head>
 <body>
@@ -38,7 +38,8 @@
     <section id="home">
         <h1>Crie Seu Próximo Evento!</h1>
         <p>Encontre, organize e compartilhe eventos incríveis com a nossa plataforma.</p>
-        <button>Comece Agora</button>
+        <li><a href="file:///C:/Users/ismae/OneDrive/Documentos/primeiro%20site%20html/formulario.html" target="_blank"> <button>Comece Agora</button></a></li>
+
 
         <img src="https://circulando.net/uploads/images/2024/04/centro-de-inovacao-criciuma-crio-1714410606.jpeg" width="1500px">
     </section>
